# python-samples-fastapi-restful

./: .codacy.yml  .coderabbit.yaml  .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .sonarcloud.properties  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASES.md  alembic.ini  codecov.yaml  codecov.yml  commitlint.config.mjs  compose.yaml  coverage.lcov  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml  requirements-lint.txt  requirements-pre-commit  requirements-test.txt  requirements.txt  runtime.txt
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
alembic/: README  env.py  script.py.mako
app/: main.py
data/: books.db  catalog.py  database.py  player_database.py  players-sqlite3.db  song_database.py  songs.db
database/: player_database.py
databases/: player_database.py
models/: models.py  player_model.py  song_model.py
postman_collections/: python-samples-fastapi-restful.postman_collection.json
rest/: players.rest
routes/: books.py  health_route.py  player_route.py  routes.py  song_route.py
schemas/: player_schema.py  schemas.py  song_schema.py
scripts/: entrypoint.sh  healthcheck.sh
services/: crud.py  player_service.py  services.py  song_service.py
src/: main.py
storage/: players-sqlite3.db
tests/: conftest.py  player_fake.py  player_stub.py  test_main.py  test_migrations.py
tools/: seed_001_starting_eleven.py  seed_002_substitutes.py
(+40 files in other folders)
