[project]
name = "python-samples-fastapi-restful"
version = "1.0.0"
description = "RESTful API proof of concept built with Python 3.13 and FastAPI"
readme = "README.md"
requires-python = ">=3.13.3"
authors = [{name = "nanotaboada", email = "hello@example.com"}]
dependencies = [
    "fastapi[standard]==0.135.3",
    "SQLAlchemy==2.0.48",
    "aiosqlite==0.22.1",
    "aiocache==0.12.3",
]

[dependency-groups]
test = [
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "pytest-sugar==1.1.1",
    "gevent==25.9.1",
]
lint = [
    "flake8==7.3.0",
    "black==26.3.1",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.github
  | \.pytest_cache
  | \.venv
  | \.vscode
  | assets
  | htmlcov
  | rest
  | scripts
  | tools
  | storage
  | __pycache__
  | tests/test_main\.py
)/
'''
